1998-08-24  Tanaka Akira      <akr@jaist.ac.jp>

	* DOODLE-TIPS: Add a notice about ew-ccl-b.

	* ew-bq.el (ew-bq-use-mel): New variable.
	(ew-decode-q): Use `q-encoding-decode-string' if `ew-bq-use-mel' is non-nil.
	(ew-encode-b): Use `base64-encode-string' if `ew-bq-use-mel' is non-nil.
	(ew-decode-b): Use `base64-decode-string' if `ew-bq-use-mel' is non-nil.

1998-08-24  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-bq.el (ew-ccl-qp-table): New constant.
	(ew-ccl-encode-quoted-printable): New CCL program.

1998-08-23  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-bq.el (ew-ccl-encode-uq): Change BUFFER_MAGNIFICATION to 3.
	(ew-ccl-encode-cq): Ditto.
	(ew-ccl-encode-pq): Ditto.
	(ew-ccl-encode-base64): New CCL program.
	(ew-ccl-base64): New coding system.

1998-08-23  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-bq.el: Re-indented.

1998-08-23  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-bq.el: New file.

	* ew-unit.el: Use 'ew-bq instead of 'mel.

1998-08-23  Tanaka Akira      <akr@jaist.ac.jp>

	* Makefile (clean): Delete rule for cleaning tl.

	* natset.el (natset-gen-ccl-branch256): New function.

1998-08-23  Tanaka Akira      <akr@jaist.ac.jp>

	* Makefile (check): New rule.

	* TESTPAT: Add batch testing facility.

	* lex.el (lex-use-ccl): Abolished.
	(lex-ccl-execute): New variable.
	(lex-ccl-use-name): New variable.
	(lex-gen-machine): Use `lex-ccl-execute' instead of `lex-use-ccl'.
	(lex-gen-ccl-unibyte-automata): Use `lex-ccl-execute' and
	`lex-ccl-use-name' for generating codes.
	(lex-gen-ccl-unibyte-automata-program): Use `lex-ccl-execute'.

1998-08-23  Tanaka Akira      <akr@jaist.ac.jp>

	* lex.el (lex-gen-ccel-unibyte-automata-state): Jump start of loop
	on end of states.

1998-08-22  Tanaka Akira      <akr@jaist.ac.jp>

	* TESTPAT: Use `\t' instead of raw TAB character.

	* ew-line.el (ew-crlf-line-generic): Accept bare LF before first CR
	occurence.

	* ew-quote.el: Evaluate constants on byte-compile time.

	* ew-unit.el: Ditto.

	* ew-var.el: Ditto.
